welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.code
def arrayFront9(nums:Array[Int]): Boolean = {
  var count:Int = 0
  
  while (i != nums.length){
    
    if (nums(i) == 9){
      return true 
    }
    
  }
  
  return false
}